k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airtasker
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: airtasker
