k8s/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airtasker-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: airtasker.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airtasker
            port:
              number: 5000
